# helkhalfi.github.io

./: .gitignore  .gitmodules  404.html  CNAME  Gemfile  README.md  _config.yml  about.markdown  archives.html  authors.html  categories.html  config.yaml  hello.py  hugo.toml  index.html  index.xml  k9s-and-how-i-loved-exploring-kubernetes-again.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.in  requirements.txt  sitemap.xml  tags.html  tasks.py  uv-the-extremely-fast-python-package-installer-and-resolver.html
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: daily-link-checker.yml  gh-pages.yml  hugo.yaml  link-check  link-check.yml  pelican.yaml
_posts/: 2021-01-03-welcome-to-jekyll.markdown
about/: index.html
author/: hichame-el-khalfi.html
categories/: index.html  index.xml
category/: kubernetes.html  python.html
content/: about.md
content/Articles/: k9.md
content/pages/: about.md  talks.md
content/posts/: my-first-post.md
content/uv/: index.md
feeds/: all.atom.xml  kubernetes.atom.xml  python.atom.xml
pages/: About.html  talks.html
pages/About/: index.html
pages/talks/: index.html
posts/: index.html  index.xml
posts/my-first-post/: index.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/about/: index.html
public/categories/: index.html  (+1 more)
tag/: aws.html  eks.html  infrastructure.html  k8s.html  k9s.html  kubectl.html  kubernetes.html  pelican.html  pip-compile.html  pip.html  python.html  rust.html  site.html  uv.html  venv.html  virtual-env.html
tags/: index.html  index.xml
(+93 files in other folders)
