[project]
name = "helkhalfi-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "invoke==2.2.0",
    "livereload==2.7.1",
    "pelican-deadlinks",
    "pelican-minify>=2.0.0",
    "pelican-seo>=1.2.2",
    "pelican[markdown]==4.10.2",
]

[tool.uv.sources]
pelican-deadlinks = { git = "https://github.com/pelican-plugins/deadlinks" }
